crates/bsql/tests/compile_fail/invalid_table.stderr
error: PostgreSQL error: relation "nonexistent_table_xyz" does not exist (at position 16)
                SQL: SELECT id FROM nonexistent_table_xyz WHERE id = 1
                                    ^
         available tables: test_jsonb, tickets, users
 --> tests/compile_fail/invalid_table.rs:2:13
  |
2 |       let _ = bsql::query!(
  |  _____________^
3 | |         "SELECT id FROM nonexistent_table_xyz WHERE id = 1"
4 | |     );
  | |_____^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
